--- a/styles.css
+++ b/styles.css
@@ -66,21 +66,17 @@ details[open] > summary .details-arrow {transform: rotate(180deg);}
 /* --- Стили для Markdown-контента --- */
 .prose { 
     color: var(--text-primary);
-    white-space: pre-wrap;
+    /*white-space: pre-wrap;*/
     word-wrap: break-word;
 }
 
-.prose p {
-    margin-top: 0.75em;
-    margin-bottom: 0.75em;
+.prose > * {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-.prose > :first-child {
-  margin-top: 0;
-}
-
-.prose > :last-child {
-  margin-bottom: 0;
+.prose > * + * {
+    margin-top: 0.85em;
 }
 
 .prose h1, .prose h2, .prose h3 { 
