--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@ details[open] > summary .details-arrow {transform: rotate(180deg);}
 .prose ol {
     margin: 0;
     padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     list-style: none;
 }
 
