--- a/styles.css
+++ b/styles.css
@@ -75,23 +75,20 @@ input::placeholder, textarea::placeholder {
 }
 
 #chat-messages {
-    /* Значение по умолчанию, которое будет обновляться из JS */
-    --form-height: 70px; 
+    /* Мы задаем CSS-переменную, которую JS будет обновлять */
+    --form-height: 70px; /* Это значение по умолчанию */
     
-    #chat-messages {
-    /* Значение по умолчанию, которое будет обновляться из JS */
-    --form-height: 70px; 
-    
+    /* А здесь мы используем эту переменную для создания маски */
     -webkit-mask-image: linear-gradient(to bottom, 
         transparent 0%, 
-        black 30px, /* ИЗМЕНЕНО: Было 20px. Теперь затенение 30px, как и нижнее. */
-        black calc(100% - var(--form-height) - 15px), 
-        transparent calc(100% - var(--form-height) + 15px)
+        black 20px, /* Затенение сверху, фиксированное */
+        black calc(100% - var(--form-height) - 30px), /* Четкая область до начала нижнего затенения */
+        transparent calc(100% - var(--form-height) + 15px) /* Плавное нижнее затенение */
     );
     mask-image: linear-gradient(to bottom, 
         transparent 0%, 
-        black 30px, /* ИЗМЕНЕНО: И здесь тоже. */
-        black calc(100% - var(--form-height) - 15px), 
+        black 20px, 
+        black calc(100% - var(--form-height) - 30px), 
         transparent calc(100% - var(--form-height) + 15px)
     );
 }
